--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,7 @@ commands = flake8 {posargs}
 commands = {posargs}
 
 [testenv:docs]
+basepython = python3
 deps = -r{toxinidir}/doc/requirements.txt
 commands = sphinx-build -W -b html doc/source doc/build/html
 
